--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,137 @@
+@import url('https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100;300;400;500;600&display=swap');
+
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root {
+  --container-width-lg: 75%;
+  --container-width-sm: 90%;
+
+  --transition: all 400ms ease;
+
+  --color-bg: #1D2323;
+  --color-primary: #383F3F;
+  --color-trim: #556E53;
+  --color-trim-lighter: #6CAF67;
+  --color-bright: #D1D4C9;
+  --color-bright-lighter: #E3EFF1;
+  --color-white: #FFFFFF;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+section {
+  margin-top: 8rem;
+}
+
+section > h2, section > h5 {
+  text-align: center;
+  color: var(--color-bright);
+}
+
+section > h2 {
+  color: var(--color-trim);
+  margin-bottom: 3rem;
+}
+
+.text-bright {
+  color: var(--color-bright-lighter);
+}
+
+a {
+  color: var(--color-trim-lighter);
+  transition: var(--transition);
+}
+
+a:hover {
+  color: var(--color-white);
+}
+
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-trim-lighter);
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--color-bg);
+  transition: var(--transition);
+}
+
+.btn:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
+}
+
+.btn-primary {
+  background: var(--color-trim-lighter);
+  color: var(--color-white);
+}
+
+img {
+  display: inline;
+  width: 100%;
+  object-fit: cover;
+}
+
 body {
-  background: black;
-  color: white;
+  font-family: 'Anek Tamil', sans-serif;
+  background-color: rgb(0,0,0);
+  background-image: url(assets/maze-black.png);
+  color: var(--color-white);
+  line-height: 1.7;
+}
+
+@media screen and (max-width: 1070px) {
+
+  section {
+    margin-top: 6rem;
+  }
+
+  header h1 {
+    display: inline-block;
+    padding-right: 0;
+  }
+
+  .portrait {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2{
+    margin-bottom: 2rem;
+  }
 }
