--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,18 @@
 
 :root {
   --container-width-lg: 75%;
+  --container-width-md: 83%;
   --container-width-sm: 90%;
 
   --transition: all 400ms ease;
 
   --color-bg: #1D2323;
   --color-primary: #383F3F;
-  --color-trim: #556E53;
-  --color-trim-lighter: #6CAF67;
-  --color-bright: #D1D4C9;
-  --color-bright-lighter: #E3EFF1;
+  --color-trim: #23242e;
+  --color-black: #010203;
+  --color-trim-lighter: #898a96;
+  --color-bright: #e6a857;
+  --color-bright-lighter: #ffe18f;
   --color-white: #FFFFFF;
 }
 
@@ -62,11 +64,11 @@ section > h2 {
 }
 
 .text-bright {
-  color: var(--color-bright-lighter);
+  color: var(--color-bright);
 }
 
 a {
-  color: var(--color-trim-lighter);
+  color: var(--color-bright-lighter);
   transition: var(--transition);
 }
 
@@ -77,23 +79,24 @@ a:hover {
 .btn {
   width: max-content;
   display: inline-block;
-  color: var(--color-trim-lighter);
+  color: var(--color-white);
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
   cursor: pointer;
-  border: 1px solid var(--color-bg);
+  border: 1px solid var(--color-trim-lighter);
   transition: var(--transition);
 }
 
 .btn:hover {
   background: var(--color-white);
-  color: var(--color-bg);
+  color: var(--color-primary);
   border-color: transparent;
 }
 
 .btn-primary {
-  background: var(--color-trim-lighter);
-  color: var(--color-white);
+  background: var(--color-bright-lighter);
+  color: black;
+  border: 1px solid black;
 }
 
 img {
@@ -111,6 +114,9 @@ body {
 }
 
 @media screen and (max-width: 1070px) {
+  .container {
+    width: var(--container-width-md);
+  }
 
   section {
     margin-top: 6rem;
@@ -118,10 +124,29 @@ body {
 
   header h1 {
     display: inline-block;
+    padding-right: 10rem;
+  }
+
+  .me {
+    margin-right: 2rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section > h2{
+    margin-bottom: 4rem;
+  }
+
+  header h1 {
+    display: inline-block;
     padding-right: 0;
   }
 
-  .portrait {
+  .me {
     display: none;
   }
 }
