--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,8 @@ h1 {
 }
 
 section {
-  margin-top: 8rem;
+  margin-top: 5rem;
+  height: 100vh;
 }
 
 section > h2, section > h5 {
@@ -119,7 +120,7 @@ body {
   }
 
   section {
-    margin-top: 6rem;
+    margin-top: 3rem;
   }
 
   header h1 {
