--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 :root {
-  --container-width-lg: 75%;
+  --container-width-lg: 70%;
   --container-width-md: 83%;
   --container-width-sm: 90%;
 
@@ -82,6 +82,7 @@ a:hover {
 .btn {
   width: max-content;
   display: inline-block;
+  background: transparent;
   color: var(--color-white);
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
